--- a/src/pages/popup.html
+++ b/src/pages/popup.html
@@ -2,11 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title></title>
+    <title>Shareplay</title>
+    <style>
+      body {
+        background-color: rgba(108,122,137,1);
+        --default-text-color: white;
+        --button-color: red;
+        width: 300px;
+        height: 400px;
+
+      }
+    </style>
   </head>
 
   <body class="body-class">
-    <div id="app-container" style="width: 400px; height: 300px;"></div>
+    <div id="app-container"></div>
     <script src="../popup.js"></script>
   </body>
 </html>
