--- a/src/pages/sign-in.html
+++ b/src/pages/sign-in.html
@@ -66,5 +66,6 @@
             <button id="google-login-btn"> Login with Google </button>
             <button id="create-account-btn"> Create Account </button>
             <div id="sign-in-result"></div>
+            <img src="./pages/image.jpeg" width="100" height="100" alt="sample image">
         </div>
     </div>
