Firebase auth with email and password example

--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -6,7 +6,7 @@
             <input id="email" type="text"></input>
         </div>
         <div class="row-register form-info">
-            <label for="password">Username:</label>
+            <label for="username">Username:</label>
             <input id="username" type="text"></input>
         </div>
         <div class="row-register form-info">
@@ -14,7 +14,7 @@
             <input id="password" type="password"></input>
         </div>
         <div class="row-register form-info">
-            <label for="password">Confirm:</label>
+            <label for="cpassword">Confirm:</label>
             <input id="cpassword" type="password"></input>
         </div>
         <button id="sign-up-btn">Sign Up</button>
