--- a/src/pages/sharing.html
+++ b/src/pages/sharing.html
@@ -1,4 +1,5 @@
 <div>
     <p>TODO: this is the main page of our application with that shows all the info and the invite link etc.</p>
     <p>TODO: add sign out button</p>
+    <button id="sign-out-btn">Sign Out</button>
 </div>
