--- a/src/pages/sign-in.html
+++ b/src/pages/sign-in.html
@@ -2,6 +2,10 @@
         <div class="sign-in-main">
             <h1 class="page-header">Login</h1>
             <div class="row-login form-info">
+                <label for="email">Email:</label>
+                <input id="email" type="email"></input>
+            </div>
+            <div class="row-login form-info">
                 <label for="username">Username:</label>
                 <input id="username" type="text"></input>
             </div>
