user info storing

--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -20,7 +20,7 @@
         <button id="sign-up-btn">Sign Up</button>
         <span id="label-ca">Already have an account?</span>
         <button id="log-in-btn">Sign In</button>
-        <div id="sign-in-result"></div>
+        <div id="sign-up-result"></div>
     </div>
     <script src="./pages/.js"></script>
 </div>
