--- a/src/pages/sharing.html
+++ b/src/pages/sharing.html
@@ -1,21 +1,26 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<div style="width: 100%; height: 100%;">
 <div class="sign-in-main">
     <!--<img id="thumbnail" src="https://i.ytimg.com/sh/tgnOEVz6d20vijq8a4_scA/market.jpg">-->
-    <div class="content-row title-row show-border">
-        <h4 id="title" class="show-border"> Video Title </h2>
+    <div class="content-row title-row">
+        <h4 id="title" class=""> Video Title </h2>
     </div>
-    <div class="content-row">
-        <img id="channelIcon" src="https://yt3.ggpht.com/ytc/AMLnZu8WlOYRHgD6WGKJuLFyL9vfpO-RpuHhgrplE-afSQ=s176-c-k-c0x00ffffff-no-rj">
-        <h5 id="channelName"></h5>
-    </div>
-    <div class="content-row view-row show-border"> 
+    <div class="content-row view-row"> 
         <p id="views"> # Views </p> 
+        <div class="vertical-line"></div>
         <p id="duration"> Duration </p> 
     </div>
-    <!--<p id="description" class="show-border desc"> description </p>-->
-    <div class="content-row share-btn-row show-border"> 
-        <button class="main-btn">Host Party</button>
+    <div class="content-row channel-row">
+        <img id="channelIcon" class="">
+        <div id="channelRowSpacer" style="width: 7%; height: 12px;" class=""></div>
+        <h5 id="channelName" class=""></h5>
     </div>
-    <button id="sign-out-btn">Sign Out</button>
+    
+    <!--<p id="description" class="show-border desc"> description </p>-->
+    <div class="content-row share-btn-row"> 
+        <button class="main-btn">Host Party</button>
+        <button id="sign-out-btn">Sign Out</button>
+    </div>
     <script src="./pages/.js"></script>
+</div>
 </div>
