host party enabled

--- a/src/pages/sharing.html
+++ b/src/pages/sharing.html
@@ -1,5 +1,8 @@
 <div>
     <p>TODO: this is the main page of our application with that shows all the info and the invite link etc.</p>
-    <p>TODO: add sign out button</p>
+    <button id="end-party-btn">End Party</button>
     <button id="sign-out-btn">Sign Out</button>
+    <input type="text" id="chat-text" value="text">
+    <button type="button" id="txt-chat-btn">Click</button>
+    <p id="test"></p>
 </div>
