Feature/video syncing (#31)

--- a/src/pages/sharing.html
+++ b/src/pages/sharing.html
@@ -1,21 +1,8 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<div class="sign-in-main">
-    <!--<img id="thumbnail" src="https://i.ytimg.com/sh/tgnOEVz6d20vijq8a4_scA/market.jpg">-->
-    <div class="content-row title-row show-border">
-        <h4 id="title" class="show-border"> Video Title </h2>
-    </div>
-    <div class="content-row">
-        <img id="channelIcon" src="https://yt3.ggpht.com/ytc/AMLnZu8WlOYRHgD6WGKJuLFyL9vfpO-RpuHhgrplE-afSQ=s176-c-k-c0x00ffffff-no-rj">
-        <h5 id="channelName"></h5>
-    </div>
-    <div class="content-row view-row show-border"> 
-        <p id="views"> # Views </p> 
-        <p id="duration"> Duration </p> 
-    </div>
-    <!--<p id="description" class="show-border desc"> description </p>-->
-    <div class="content-row share-btn-row show-border"> 
-        <button class="main-btn">Host Party</button>
-    </div>
+<div>
+    <p>TODO: this is the main page of our application with that shows all the info and the invite link etc.</p>
+    <button id="end-party-btn">End Party</button>
     <button id="sign-out-btn">Sign Out</button>
-    <script src="./pages/.js"></script>
+    <input type="text" id="chat-text" value="text">
+    <button type="button" id="txt-chat-btn">Click</button>
+    <p id="test"></p>
 </div>
