--- a/src/pages/sharing.html
+++ b/src/pages/sharing.html
@@ -4,5 +4,6 @@
     <button id="sign-out-btn">Sign Out</button>
     <input type="text" id="chat-text" value="text">
     <button type="button" id="txt-chat-btn">Click</button>
+    <button type="button" id="share-btn">Share</button>
     <p id="test"></p>
 </div>
