--- a/src/pages/popup.html
+++ b/src/pages/popup.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!--<link rel="stylesheet" type="text/css" href="style.css">-->
+    <script crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <title>Shareplay</title>
   </head>
