--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,17 +1,19 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="sign-in-main">
     <!--<img id="thumbnail" src="https://i.ytimg.com/sh/tgnOEVz6d20vijq8a4_scA/market.jpg">-->
-    <div class="content-row title-row show-border">
+    <div class="content-row title-row">
         <h4 id="title"> Video Title </h2>
     </div>
-    <div class="content-row">
-        <img id="channelIcon" src="https://yt3.ggpht.com/ytc/AMLnZu8WlOYRHgD6WGKJuLFyL9vfpO-RpuHhgrplE-afSQ=s176-c-k-c0x00ffffff-no-rj">
-        <h5 id="channelName"></h5>
-    </div>
-    <div class="content-row view-row show-border info-items"> 
+    <div class="content-row view-row info-items"> 
         <p id="views"> # Views </p> 
+        <div class="vertical-line"></div>
         <p id="duration"> Duration </p> 
     </div>
+    <div class="content-row channel-row">
+        <img id="channelIcon">
+        <h5 id="channelName"></h5>
+    </div>
+    
     <!--<p id="description" class="show-border desc"> description </p>-->
     <div class="content-row share-btn-row"> 
         <button class="main-btn" id="host-party-btn">Host Party</button>
