--- a/src/pages/sign-in.html
+++ b/src/pages/sign-in.html
@@ -1,4 +1,4 @@
-<div style="width: 100%; height: 100%;">   
+<div>   
         <div class="sign-in-main">
             <h1 class="page-header">Login</h1>
             <div class="row-login form-info">
