--- a/src/pages/sharing.html
+++ b/src/pages/sharing.html
@@ -7,13 +7,16 @@
         </div>
         <div id="chat">
             <!-- messages -->
-            <div class="msg-container recieved">
+            <!-- <div class="msg-container recieved">
                 <p class="msg-header">Other User</p>
-                <p class="msg"> Message that the user recieves </p>
+                <p class="msg-recieved"> Message that the user recieves </p>
             </div>
             <div class="msg-container sent">
                 <p class="msg-header">Me</p>
-                <p class="msg"> Message that the user sends </p>
+                <p class="msg-sent"> Message that the user sends </p>
+            </div>
+            <div class="computer">
+                <p class="com-msg"><i>user joined</i></p>
             </div>
             <div class="msg-container sent">
                 <p class="msg-header">Me</p>
@@ -22,7 +25,7 @@
             <div class="msg-container recieved">
                 <p class="msg-header">Other User</p>
                 <p class="msg"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
+            </div> -->
         </div>
         <div id="chat-footer">
             <input type="text" id="chat-text" placeholder="Text">
